<resources>
    <string name="app_name">iompar</string>
    <string name="action_settings">Settings</string>
    <string name="about_us_option">About Us</string>
    <string name="visit_website">Visit Our Website</string>
    <string name="about_us">GlassByte is a software development start-up company headquartered in Dublin, Ireland. Our small, ambitious team strives to create innovative and useful software for computing platforms.</string>
    <string name="about_us_more">For more apps or business enquiries, visit our website!\nhttp://www.glassbyte.com/</string>
    <string name="apache_title">Apache Licence</string>
    <string name="apache_summary">Here\'s some information about how we distribute software.</string>
    <string name="apache_body">Copyright 2016 GlassByte Limited. Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="more_from_glassbyte">More from GlassByte</string>
    <string name="personal">Personal</string>
    <string name="language_options">Language Options</string>
    <string name="more_apps">Find More of Our Apps</string>
    <string name="click_here_for_more_apps">Click here to see more of our apps on Google Play.</string>
    <string name="libraries_used">Libraries Used</string>
    <string name="list_libraries_used">Here\'s a list of the libraries used by the developers.</string>
    <string name="modify_name">Modify Name</string>
    <string name="modify_fare">Modify Fare Type</string>
    <string name="irish_language">Irish Language</string>
    <string name="irish_language_summary">Choose this option to use this app with an Irish Gaelic interface.</string>
    <string name="follow_on_fb">Follow Us on Facebook</string>
    <string name="follow_on_twitter">Follow Us on Twitter</string>
    <string name="rate_app">Rate iompar</string>
    <string name="adult">Adult</string>
    <string name="student">Student</string>
    <string name="child">Child</string>
    <string name="other">Other</string>
    <string-array name="fare_types">
        <item>@string/adult</item>
        <item>@string/student</item>
        <item>@string/child</item>
        <item>@string/other</item>
    </string-array>
    <string name="pref_key_contact" translatable="false">pref_key_contact</string>
    <string name="pref_key_app_settings" translatable="false">pref_key_settings</string>
    <string name="pref_key_language" translatable="false">pref_key_language</string>
    <string name="pref_key_name" translatable="false">pref_key_name</string>
    <string name="pref_key_fare" translatable="false">pref_key_fare</string>
    <string name="pref_key_prefer_leap" translatable="false">pref_key_prefer_leap</string>
    <string name="pref_key_irish" translatable="false">pref_key_irish</string>
    <string name="pref_key_leap_sync" translatable="false">pref_key_leap_sync</string>
    <string name="pref_key_has_been_run" translatable="false">pref_key_has_been_run</string>
    <string name="pref_key_first_sync" translatable="false">pref_key_first_sync</string>
    <string name="pref_key_last_synced_balance" translatable="false">pref_key_last_synced_balance</string>
    <string name="pref_key_curr_synced_balance" translatable="false">pref_key_curr_synced_balance</string>
    <string name="pref_key_current_balance" translatable="false">pref_key_current_balance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="OK">OK</string>
    <string name="username">Username</string>
    <string name="leap_card_number">Leap Card Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="slide_one_welcome">Welcome to iompar</string>
    <string name="slide_one_description">The all-round transportation app for Ireland.</string>
    <string name="slide_one_irish_option">Use app in Irish Gaelic</string>
    <string name="slide_two_title">What\'s your name?</string>
    <string name="slide_two_hint">Your name</string>
    <string name="slide_two_fare_type">What\'s Your Fare Type?</string>
    <string name="slide_two_description">This can be changed later under settings</string>
    <string name="slide_three_title_one">Payment Preference</string>
    <string name="slide_three_pay_cash">I pay using cash</string>
    <string name="slide_three_pay_leap">I pay using Leap</string>
    <string name="slide_three_title_two">Leap Information</string>
    <string name="slide_three_desc_leap">Leap cards make transport quicker, easier, and cheaper.\n\nMake sure to register it online so you can access your balance here.</string>
    <string name="slide_three_desc_cash">Cash is slower and more expensive to use in comparison to a Leap card.\n\nPurchase a Leap card for €5 and save money on journeys.</string>
    <string name="slide_four_title">What now?</string>
    <string name="slide_four_desc">iompar helps you track your public transport and expenditures intelligently.\n\nMonitor your spending and never miss that journey again.</string>
    <string name="positive_leapcard_drawer">This profile has a positive Leap balance.</string>
    <string name="negative_leapcard_drawer">This profile has a negative Leap balance.</string>
    <string name="cash_leapcard_drawer">This profile is using cash.</string>
    <string name="relatime_info">Realtime Information</string>
    <string name="manage_leap">Manage Leap Cards</string>
    <string name="fare_calc">Fare Calculator</string>
    <string name="expenditures">Expenditures</string>
    <string name="loading_stations">Loading stations…</string>
    <string name="loading_times">Loading times…</string>
    <string name="error_in_data">Error in retrieving data!</string>
    <string name="check_connection">Please check your internet connection!</string>
    <string name="luas_title">Luas</string>
    <string name="green_line">Green Line</string>
    <string name="red_line">Red Line</string>
    <string name="brides_glen_stephens_green">Bride\'s Glen-St. Stephen\'s Green Line</string>
    <string name="sandyford_stephens_green">Sandyford-St. Stephen\'s Green Line</string>
    <string name="tallaght_point">Tallaght-The Point Line</string>
    <string name="saggart_connolly">Saggart-Connolly Line</string>
    <string name="heuston_connolly">Heuston-Connolly Line</string>
    <string name="terminus">Terminus:</string>
    <string name="eta">"ETA: "</string>
    <string name="origin">Origin:</string>
    <string name="destination">Destination:</string>
    <string name="no_departures_found">No departures found</string>
    <string name="no_times_found">No times found</string>
    <string name="unavailable_try_other_line">Unavailable, try other line</string>
    <string name="unavailable">Unavailable</string>
    <string name="arriving_soon">Arriving soon</string>
    <string name="one_min_away">1 min away</string>
    <string name="mins_away"> mins away</string>
    <string name="could_not_connect_real_time">Could not connect to real-time services. Check your internet connection.</string>
    <string name="sometimes_rtpi_is_down">Sometimes RTPI.ie is down - our app depends on it to report times :(</string>
    <string name="leap_added_successfully">Leap card added successfully</string>
    <string name="cards_cleared_successfully">Cards all cleared successfully</string>
    <string name="clear_leap_cards">Clear Leap Cards</string>
    <string name="confirm_remove_all_cards">Are you sure you want to remove all cards?</string>
    <string name="active">Active</string>
    <string name="balance">Balance</string>
    <string name="leap">Leap</string>
    <string name="cash">Cash</string>
    <string name="cash_lowercase">cash</string>
    <string name="zones_fares">Zones:</string>
    <string name="cost_fares">Cost:</string>
    <string name="topup">Top Up</string>
    <string name="amend">Amend</string>
    <string name="time_added">Time Added</string>
    <string name="type">Type</string>
    <string name="leap_number">Leap Number</string>
    <string name="cost">Cost</string>
    <string name="expenditures_today">Total today:</string>
    <string name="expenditures_this_week">Total this week:</string>
    <string name="expenditures_this_month">Total this month:</string>
    <string name="remove_expenditure">Remove Expenditure</string>
    <string name="remove">Remove</string>
    <string name="remove_expenditure_clause_one">The chosen expenditure (</string>
    <string name="remove_expenditure_clause_two">") of "</string>
    <string name="remove_expenditure_clause_three">" will be removed."</string>
    <string name="leap_payment">Leap Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="current_leap_balance">Current Leap Balance:</string>
    <string name="cost_of_journey">Cost of this Journey:</string>
    <string name="add_expenditure">Add Expenditure</string>
    <string name="add">Add</string>
    <string name="expenditure_added_successfully">Expenditure added successfully</string>
    <string name="no_active_leap">No Active Leap Card</string>
    <string name="no_active_leap_body">No active Leap card was detected, please activate one under settings. Click add if you wish to add this expense as a cash expenditure.\n\nThis will cost €</string>
    <string name="more">more.</string>
    <string name="cancel">Cancel</string>
    <string name="add_leap">Add a Leap Card</string>
    <string name="leap_card_username">Leap Card Username</string>
    <string name="leap_card_email">Leap Card Email</string>
    <string name="leap_card_password">Leap Card Password</string>
    <string name="stephens_green">St. Stephen\'s Green</string>
    <string name="harcourt_st">Harcourt St.</string>
    <string name="charlemont">Charlemont</string>
    <string name="ranelagh">Ranelagh</string>
    <string name="beechwood">Beechwood</string>
    <string name="cowper">Cowper</string>
    <string name="milltown">Milltown</string>
    <string name="windy_arbour">Windy Arbour</string>
    <string name="dundrum">Dundrum</string>
    <string name="balally">Balally</string>
    <string name="kilmacud">Kilmacud</string>
    <string name="stillorgan">Stillorgan</string>
    <string name="sandyford">Sandyford</string>
    <string name="central_park">Central Park</string>
    <string name="glencairn">Glencairn</string>
    <string name="the_gallops">The Gallops</string>
    <string name="leopardstown_valley">Leopardstown Valley</string>
    <string name="ballyogan_wood">Ballyogan Wood</string>
    <string name="carrickmines">Carrickmines</string>
    <string name="laughanstown">Laughanstown</string>
    <string name="cherrywood">Cherrywood</string>
    <string name="brides_glen">Bride\'s Glen</string>
    <string name="connolly">Connolly</string>
    <string name="busaras">Busaras</string>
    <string name="abbey_street">Abbey Street</string>
    <string name="jervis">Jervis</string>
    <string name="four_courts">Four Courts</string>
    <string name="smithfield">Smithfield</string>
    <string name="museum">Museum</string>
    <string name="heuston">Heuston</string>
    <string name="jamess">James\'s</string>
    <string name="fatima">Fatima</string>
    <string name="rialto">Rialto</string>
    <string name="suir_road">Suir Road</string>
    <string name="goldenbridge">Goldenbridge</string>
    <string name="drimnagh">Drimnagh</string>
</resources>