<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/expenditures_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/headings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/time_added"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/table_cell"
                    android:gravity="center"
                    android:text="@string/time_added" />

                <TextView
                    android:id="@+id/payment_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/table_cell"
                    android:gravity="center"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/leap_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/table_cell"
                    android:gravity="center"
                    android:text="@string/leap_number" />

                <TextView
                    android:id="@+id/cost_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/table_cell"
                    android:gravity="center"
                    android:text="@string/cost" />
            </TableRow>
        </TableLayout>
    </ScrollView>


</LinearLayout>