<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slide_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="#BF9F87"
    android:orientation="vertical">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <!--> leap info, language preference <-->

        <RelativeLayout
            android:id="@+id/payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:fontFamily="sans-serif-thin"
                android:id="@+id/payment_title_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/slide_three_title_one"
                android:textSize="28sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginEnd="16dp"
            android:id="@+id/payment_options_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="6dp"
                android:id="@+id/cash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/slide_three_pay_cash" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_below="@id/cash_text"
                android:id="@+id/leap_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/slide_three_pay_leap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_toEndOf="@+id/payment_options_cash"
            android:id="@+id/payment_options_leap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Switch
                android:id="@+id/switch_pref_leap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:layout_below="@+id/switch_pref_leap"
                android:id="@+id/switch_pref_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_directions_transit_white_48dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/payment_desc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/slide_three_desc_cash"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />
</LinearLayout>